# poc.dev

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt
apps/posts/: models.py  urls.py  views.py
core/: settings.py  urls.py
tests/apps/posts/: test_posts_models.py  test_posts_views.py
